# rules_graalvm

./: .bazelignore  .bazelproject  .bazelrc  .gitattributes  .gitattributes-release  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  BUILD.bazel  COPYING  LICENSE  MODULE-resolved.bzl  MODULE.bazel  Makefile  README.md  SECURITY.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  extensions.bzl  go.mod  go.sum  local.bazelrc.inert  maven_install.json  package.json  pnpm-lock.yaml  pom.xml  requirements.in  requirements.txt  requirements_lock.txt  version.bazelrc
.aspect/bazelrc/: bazel7.bazelrc  correctness.bazelrc  performance.bazelrc
.bazelci/: presubmit.yml
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT.md  dependabot.yml  dependency-review-config.yml  renovate.json
.github/workflows/: bazel.ci.yml  check.buildifier.yml  check.codeql.yml  check.lint-yaml.yml  check.scorecards.yml  ci.bazelrc  codeql.yml  deploy.docs.yml  module.build.yml  module.test.yml  on.pr.yml  on.push.yml  on.release.yml  release_prep.sh  scorecards.yml
docs/: binary-targets.md  build-settings.md  components.md  examples.md  hermeticity.md  index.md  legacy-bazel.md  maven-artifacts.md  modern-bazel.md  native-image.md  shared-libraries.md  toolchain.md  windows.md
docs/api/: BUILD.bazel  artifacts.md  defs.md  legacy.md  repositories.md  toolchain.md  workspace.md
example/: BUILD
example/bzlmod/: .bazelrc  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod
example/disabled_tests/bazel3/: WORKSPACE.bazel
example/integration_tests/bazel4/: WORKSPACE.bazel
example/integration_tests/bazel5/: .bazelrc  WORKSPACE.bazel
example/integration_tests/bazel6/: .bazelrc  WORKSPACE.bazel
example/integration_tests/bzlmod/: .bazelrc  MODULE.bazel  WORKSPACE.bazel
example/integration_tests/bzlmod/sample/: BUILD.bazel  Main.java
example/integration_tests/components-ce/: .bazelrc  MODULE.bazel  WORKSPACE.bazel
example/integration_tests/components-ce/sample/: BUILD.bazel  Main.java
example/integration_tests/components-oracle/: MODULE.bazel
example/integration_tests/graalvm-ce-17/: .bazelversion  WORKSPACE.bazel
example/integration_tests/graalvm-ce-20/: .bazelrc  WORKSPACE.bazel
example/integration_tests/graalvm-ce-21/: WORKSPACE.bazel
example/integration_tests/graalvm-ce-22/: WORKSPACE.bazel
example/integration_tests/graalvm-ce-23/: WORKSPACE.bazel
example/integration_tests/graalvm-oracle-17/: .bazelversion  WORKSPACE.bazel
example/integration_tests/graalvm-oracle-21/: WORKSPACE.bazel
example/integration_tests/graalvm-oracle-22/: WORKSPACE.bazel
example/integration_tests/graalvm-oracle-23/: WORKSPACE.bazel
example/integration_tests/inert/: MODULE.bazel
example/integration_tests/inert-workspace/: .bazelrc  WORKSPACE.bazel
example/integration_tests/legacy-rules/: .bazelrc  WORKSPACE.bazel
example/integration_tests/legacy-rules/sample/: BUILD.bazel
example/integration_tests/maven-artifacts/: .bazelrc  WORKSPACE.bazel
example/integration_tests/maven-artifacts/sample/: BUILD.bazel
example/integration_tests/workspace/: WORKSPACE.bazel
example/integration_tests/workspace/sample/: BUILD.bazel
example/legacy/: BUILD.bazel
example/modular/: BUILD.bazel  module-info.java
example/native/: BUILD.bazel
example/shared/: BUILD.bazel
example/testing/: BUILD.bazel  Something.java  SomethingTest.java
graal/: BUILD.bazel  graal.bzl  graal_bindist.bzl
graalvm/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl  workspace.bzl
graalvm/artifacts/: BUILD.bazel  deps.bzl  maven.bzl
graalvm/nativeimage/: BUILD.bazel  options.bzl  rules.bzl
graalvm/nativeimage/options/: BUILD.bazel
graalvm/platform/engine/java/: BUILD.bazel
graalvm/platform/engine/javascript/: BUILD.bazel
graalvm/platform/engine/llvm/: BUILD.bazel
graalvm/platform/engine/python/: BUILD.bazel
graalvm/platform/engine/ruby/: BUILD.bazel
graalvm/platform/engine/wasm/: BUILD.bazel
graalvm/platform/jvm/: BUILD.bazel
graalvm/testing/: BUILD.bazel  NativeTestFeature.java  NativeTestLauncher.java  NativeTestRunner.java  defs.bzl
graalvm/toolchain/: BUILD.bazel
graalvm/toolchain/gvm/: BUILD.bazel
graalvm/toolchain/javascript/: BUILD.bazel
graalvm/toolchain/native_image/: BUILD.bazel
graalvm/toolchain/python/: BUILD.bazel
graalvm/toolchain/ruby/: BUILD.bazel
graalvm/toolchain/wasm/: BUILD.bazel
internal/: BUILD.bazel  config.bzl  deps.bzl  distribution.bzl  engines.bzl  graalvm_bindist.bzl  graalvm_bindist_legacy.bzl  graalvm_bindist_map.bzl  jdk_build_file.bzl  maven.bzl  repositories.bzl  setup.bzl  testing.bzl  toolchain.bzl
internal/conditions/: BUILD.bazel
internal/conditions/compiler/: BUILD.bazel
internal/conditions/tools/: BUILD.bazel
internal/native_image/: BUILD.bazel  builder.bzl  classic.bzl  common.bzl  rules.bzl  settings.bzl  testing.bzl  toolchain.bzl
internal/native_image/options/: BUILD.bazel  arch.bzl
lib/: BUILD.bazel
lib/nativeimage/: BUILD.bazel
tasks/: BUILD
tasks/src/: ci.sh
tests/analysis/: BUILD.bazel  analysis_tests.bzl
tests/analysis/legacy/: BUILD.bazel  (+1 more)
tools/: BUILD.bazel  bazel
tools/bazel/: base.bazelrc  bazel5.bazelrc  bazel6.bazelrc  bazel7.bazelrc  bazel8.bazelrc  buildbuddy.bazelrc  bzlmod.bazelrc  cache.bazelrc  ci.bazelrc  dev.bazelrc  hermetic.bazelrc  java.bazelrc  labs.bazelrc  linux.bazelrc  macos.bazelrc  profiles.bazelrc  strict.bazelrc  windows.bazelrc
tools/defs/: junit5.bzl
tools/scripts/: BUILD.bazel  generator.py  genhash.sh  latest_version_tag.sh  run_test.sh  workspace.sh
tools/scripts/mapping_generator/: BUILD.bazel  __init__.py  artifact.py  cli.py  config.py  constants.py  definitions.py  downloader.py  generator.py  github.py  logger.py  main.py  matrix.py  oracle_gds.py  render.py  repo.py  rule.py  test_cli_help.py  versions.py
tools/scripts/mapping_generator_tests/: BUILD.bazel  mapping_generator_import_test.py
tools/versions/: README.md  bazel4.bazelrc  bazel5.bazelrc  bazel6.bazelrc
(+11 files in other folders)
