"Bazel Rules for GraalVM"

load(
    "@bazel_gazelle//:def.bzl",
    "gazelle",
)
load(
    "@buildifier_prebuilt//:rules.bzl",
    "buildifier",
)
load(
    "@rules_python//python:pip.bzl",
    "compile_pip_requirements",
)

compile_pip_requirements(
    name = "python_requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = ":requirements.txt",
    requirements_txt = ":requirements_lock.txt",
    tags = ["manual"],
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
        "./bazel-*/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier.format",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
)

exports_files([
    "maven_install.json",
    "WORKSPACE.bazel",
    "requirements.txt",
    "requirements_lock.txt",
])

# gazelle:prefix github.com/sgammon/rules_graalvm
gazelle(
    name = "gazelle",
)

alias(
    name = "generator",
    actual = "//tools/scripts/mapping_generator",
)
