"Bazel Rules for GraalVM"

load(
    "@bazel_gazelle//:def.bzl",
    "gazelle",
)
load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)

[
    alias(
        name = target,
        actual = "//tools:%s" % target,
    ) for target in [
        "python_requirements",
        "buildifier.check",
        "buildifier.format",
        "generator",
        "generator.update",
    ]
]

exports_files([
    "maven_install.json",
    "WORKSPACE.bazel",
    "requirements.txt",
    "requirements_lock.txt",
])

bzl_library(
    name = "lib",
    deps = [
        "//lib:%s" % target for target in [
            "defs",
            "toolchain",
            "repositories",
            "workspace",
        ]
    ],
)

# gazelle:prefix github.com/sgammon/rules_graalvm
gazelle(
    name = "gazelle",
)
