load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)
load(
    "@io_bazel_stardoc//stardoc:stardoc.bzl",
    "stardoc",
)

exports_files([
    "defs.bzl",
    "repositories.bzl",
])

bzl_library(
    name = "defs",
    srcs = [
        "defs.bzl",
    ],
    deps = [
        "//graalvm/nativeimage:rules",
        "//internal:tooling",
    ],
)

bzl_library(
    name = "repositories",
    srcs = [
        "repositories.bzl",
    ],
    deps = [
        "//internal:bindist",
        "//internal:tooling",
    ],
)

stardoc(
    name = "defs_doc",
    out = "defs.md",
    input = "defs.bzl",
    visibility = ["//docs:__subpackages__"],
    deps = [
        "//graalvm/nativeimage:rules",
        "//internal:tooling",
    ],
)

stardoc(
    name = "repositories_doc",
    out = "repositories.md",
    input = "repositories.bzl",
    visibility = ["//docs:__subpackages__"],
    deps = [
        "//internal:bindist",
        "//internal:tooling",
    ],
)
