"GraalVM Rules package internals."

package(default_visibility = [
    "//docs:__subpackages__",
    "//graalvm:__subpackages__",
    "//lib:__pkg__",
    "//tools:__subpackages__",
])

exports_files([
    "config.bzl",
    "deps.bzl",
    "graalvm_bindist.bzl",
    "graalvm_bindist_map.bzl",
    "graalvm_bindist_legacy.bzl",
    "jdk_build_file.bzl",
    "maven.bzl",
    "toolchain.bzl",
    "engines.bzl",
])
