"Bazel library targets for GraalVM rule internals."

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)

package(default_visibility = [
    "//lib:__subpackages__",
    "//docs:__subpackages__",
])

bzl_library(
    name = "defs",
    srcs = [
        "defs.bzl",
    ],
    deps = [
        "//graalvm/nativeimage:rules",
        "//internal:tooling",
    ],
)

bzl_library(
    name = "repositories",
    srcs = [
        "repositories.bzl",
    ],
    deps = [
        "//internal:bindist",
        "//internal:tooling",
    ],
)

bzl_library(
    name = "workspace",
    srcs = [
        "workspace.bzl",
    ],
)

bzl_library(
    name = "tooling",
    srcs = [
        "@bazel_tools//tools:bzl_srcs",
    ],
)

bzl_library(
    name = "java_toolchains",
    srcs = [
        "@rules_java//toolchains:bzl_srcs",
    ],
)

bzl_library(
    name = "config",
    srcs = ["//internal:config.bzl"],
)

bzl_library(
    name = "deps",
    srcs = ["//internal:deps.bzl"],
)

bzl_library(
    name = "bindist_map",
    srcs = ["//internal:graalvm_bindist_map.bzl"],
)

bzl_library(
    name = "bindist_map_legacy",
    srcs = ["//internal:graalvm_bindist_legacy.bzl"],
)

bzl_library(
    name = "bindist",
    srcs = ["//internal:graalvm_bindist.bzl"],
    deps = [
        ":java_toolchains",
        ":tooling",
        ":bindist_map",
        ":bindist_map_legacy",
    ],
)

bzl_library(
    name = "maven",
    srcs = ["//internal:maven.bzl"],
    deps = [
        ":config",
        ":tooling",
    ],
)

bzl_library(
    name = "jdk_build_file",
    srcs = ["//internal:jdk_build_file.bzl"],
)
